US1226 - adding spacing fix

--- a/c3/app/assets/styles/skeleton/_sandbox.scss
+++ b/c3/app/assets/styles/skeleton/_sandbox.scss
@@ -26,3 +26,8 @@
         top: 22px;
     }
 }
+
+//circumstances/report-changes/employment-finished
+#howOften_wrap {
+    margin-top: 30px;
+}
